# Grace-

./: .dockerignore  .env.example  .env.production.example  .env.template  .gitignore  .gitignore.security  ALL_TODOS_COMPLETE.md  API.md  ARCHITECTURE.md  ARCHITECTURE_4LAYER.md  ARCHITECTURE_REFACTORED.md  ARCHITECTURE_VISUAL.txt  BREAKTHROUGH_IMPLEMENTATION_COMPLETE.md  BREAKTHROUGH_ROADMAP.md  BUILDING_100_PERCENT_REAL.md  CLEANUP_EXECUTION.md  CLEANUP_LOG.md  CLEANUP_REPORT.md  COMMUNICATIONS_GUIDE.md  COMPLETE_ALL_GAPS.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TEST_ERRORS.json  COMPREHENSIVE_TEST_RESULTS.md  COMPREHENSIVE_TEST_SUMMARY.md  CONFIG.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  CORTEX_MERGER_COMPLETE.md  CRITICAL_FIX_REQUIRED.md  CRITICAL_GAPS_FIXED.md  CURRENT_IMPLEMENTATION.md  DEBLOAT_AUDIT.md  DEBLOAT_STRATEGY.md  DELETION_AUDIT.md  DELETION_MANIFEST.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_COMPLETE.md  DEPLOYMENT_READINESS_REPORT.md  (+249 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh  start-services.sh
.github/: BRANCH_PROTECTION.md  CODEOWNERS
GRACE_KNOWLEDGE_BASE/: README.md
alembic/: env.py
backend/: Dockerfile  __init__.py  auth.py  config.py  grace_integration.py  main.py  main.py.new
config/: .env.template  __init__.py  pytest.ini  trigger_mesh.yaml
core/: __init__.py  contracts.py  event_bus.py  memory_core.py
data/: grace_memory.db
database/: build_all_tables.py  build_complete_database.py  grace_dev.sqlite3  grace_immutable.sqlite3  init_all_tables.sql  init_meta_loop_tables.sql  init_security_selfawareness_tables.sql  verify_database.py
demo_and_tests/: __init__.py  comprehensive_governance_test.py  conftest.py  governance_compliance_example.py  test_governance_audit.py  unified_spec_demo.py
demos/: demo_breakthrough_system.py  demo_gtrace_runner.py  demo_ingress_kernel.py  demo_mldl_specialists.py
docs/: ARCHITECTURE.md  AUDIT_VERIFICATION_GUIDE.md  DR_RUNBOOK.md  GRACE_ANALYSIS.md  GRACE_UNIFIED_OPERATING_SPEC_COMPLETE.md  ONE_HOUR_SETUP.md  PATTERN_FIXES.md  PAWEL_SYSTEM_DEEPDIVE.md  PROD_RUNBOOK.md  TEST_QUALITY_SYSTEM.md  TRIGGERMESH_IMPLEMENTATION.md  TRIGGERMESH_QUICKSTART.md  UNIFIED_SPEC_INTEGRATION.md  UNIFIED_SPEC_QUICK_REFERENCE.md  UNIFIED_SPEC_SUMMARY.md  qdrant_snapshot_policy.md
documentation/: API_REFERENCE.md  COMPLETE_ARCHITECTURE.md  DATABASE_BUILD_COMPLETE.md  DATABASE_SCHEMA.md  DB_QUICK_REFERENCE.md  DB_SETUP_README.md  DEPLOYMENT.md  DEVELOPMENT.md  FINAL_SUMMARY.md  FINAL_TEST_STATUS.md  GOVERNANCE_MLDL_CONSENSUS.md  GRACE_COGNITIVE_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  MEMORY_ARCHITECTURE.md  OPEN_SOURCE_ARCHITECTURE.md  RUNBOOK.md  SELF_AWARENESS_ARCHITECTURE.md
examples/: README.md  complete_system_example.py  quickstart.py
frontend/: index.html
grace/: KERNEL_SERVICE_AUDIT.md  KERNEL_SERVICE_COMPLETE_REPAIR_PLAN.md  KERNEL_SERVICE_PHASES_2_4_COMPLETE.md  KERNEL_SERVICE_QUICK_START.md  KERNEL_SERVICE_REPAIR_SUMMARY.md  MERGE_AVN_IMMUNE_COMPLETE.md  MERGE_AVN_IMMUNE_PLAN.md  MERGE_AVN_IMMUNE_SUMMARY.md  MERGE_AVN_IMMUNE_VISUAL.txt  __init__.py  __init__.pyi  api.py  config.py  consciousness.py  immutable_log.py  launcher.py  main.py  merge_avn_immune.sh  models.py  orchestrator_manifest.py  plugin_registry.py  scheduler.py  trigger_mesh.py  watchdog.py
grace-core/: README.md  pyproject.toml
grace-core/grace/: __init__.py
grace-core/grace/contracts/: __init__.py  dto_common.py
grace_data/: .grace_signing_key  trust_ledger.jsonl
grace_service/: __init__.py  app.py  websocket_manager.py
immune/: avn_core.py
infra/: nginx-bluegreen.conf  nginx-tls.conf
intelligence/: __init__.py  intelligence_service.py  test_intelligence_kernel.py
kubernetes/: grace-production.yaml  istio-integration.yaml
layer_01_governance/: governance_engine.py  parliament.py  trust_core_kernel.py  verification_engine.py
layer_02_event_mesh/: __init__.py  trigger_mesh.py
layer_04_audit_logs/: __init__.py  immutable_logs.py
migrations/: 001_add_immutable_log.sql  002_phase_a_core_tables.sql  003_phase_b_forensics_tables.sql  env.py
mldl/: __init__.py  quorum.py
mobile/: GraceApp.tsx
monitoring/: prometheus-complete.yml  prometheus.yml  prometheus_slos_alerts.yml
multi_os/: __init__.py  main.py  multi_os_service.py
orchestration/: trigger_mesh_ml_workflows.yaml
schemas/: governance_events.yaml
scripts/: README.md  analyze_all_problems.py  apply_migrations.py  apply_pattern_fixes.sh  audit_golden_paths.py  audit_type_safety.py  auto_fix_issues.py  auto_fix_pylance.py  bluegreen_deploy.sh  bootstrap.py  check_dangerous_operations.py  check_imports.py  check_kpi_thresholds.py  check_missing_imports.py  check_red_errors.py  check_trust_scores.py  check_types.py  ci_auto_rollback.sh  ci_coverage_check.sh  ci_image_signing.sh  ci_security_checks.sh  count_pylance_errors.py  create_tables_via_orm.py  demo_triggermesh.py  dlq_replay_cli.py  e2e_smoke_test.py  ensure_init_files.py  final_trust_ledger_fix.sh  final_validation.py  fire_drill_alert.sh  fix-and-run.sh  fix_all_critical_issues.py  fix_all_imports.py  fix_all_init_files.py  fix_all_issues.py  fix_all_pylance_issues.py  fix_all_types.py  fix_and_run.sh  fix_config_and_run.sh  fix_critical_gaps.py  (+55 more)
test_reports/: quality_report_20251014_114909.json  quality_report_20251014_130800.json  quality_report_20251014_131108.json  quality_report_20251014_132207.json  quality_report_20251014_132703.json  quality_report_20251014_132805.json  quality_report_20251014_133239.json
tests/: conftest.py  smoke_tests.py  test_async_memory.py  test_auth.py  test_auth_simple.py  test_complete_grace_system.py  test_complete_system.py  test_e2e_golden_path.py  test_e2e_phase_verification.py  test_end_to_end.py  test_event_bus_features.py  test_governance.py  test_governance_mldl_consensus.py  test_grace_comprehensive_e2e.py  test_hunter_protocol.py  test_integration_full.py  test_kernel_management.py  test_kpis.py  test_mcp.py  test_memory_integration.py  test_observability_complete.py  (+9 more)
(+1064 files in other folders)
