[metadata]
name = grace-ai
version = 1.0.0
description = Grace AI System - Constitutional AI with Multi-Agent Coordination
author = Grace AI Team
python_requires = >=3.11

[options]
packages = find:
install_requires =
    fastapi>=0.104.0
    uvicorn>=0.24.0
    pydantic>=2.4.0
    pydantic-settings>=2.0.0
    sqlalchemy>=2.0.0
    python-jose>=3.3.0
    passlib>=1.7.4
    sentence-transformers>=2.2.2
    transformers>=4.35.0
    faiss-cpu>=1.7.4
    numpy>=1.24.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-env>=1.1.0
    black>=23.0.0
    ruff>=0.1.0

async =
    asyncpg>=0.29.0
    aioredis>=2.0.1

llm =
    llama-cpp-python>=0.2.0

[options.entry_points]
console_scripts =
    grace = main:main
