[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grace-core"
version = "0.1.0"
description = "Grace AI - Distributed Governance, Intelligence & Memory System"
authors = [
    {name = "Grace Team", email = "team@grace.ai"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Database & Storage
    "asyncpg>=0.28.0",
    "redis>=4.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    
    # Vector & ML
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # LLM & AI
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "vllm>=0.2.0",
    
    # Async & Concurrency
    "asyncio>=3.4.3",
    "aiofiles>=23.1.0",
    "aioredis>=2.0.0",
    "aioboto3>=12.0.0",
    
    # Cryptography & Security
    "cryptography>=40.0.0",
    "PyJWT>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Utilities
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    
    # Web scraping & content
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    
    # File processing
    "python-magic>=0.4.27",
    "pillow>=10.0.0",
    "PyPDF2>=3.0.0",
    
    # Monitoring
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
]

test = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.2.0",
    "faker>=18.9.0",
]

[project.urls]
Homepage = "https://github.com/aaron031291/Grace-"
Documentation = "https://github.com/aaron031291/Grace-/wiki"
Repository = "https://github.com/aaron031291/Grace-"
Issues = "https://github.com/aaron031291/Grace-/issues"

[project.scripts]
grace = "grace.main:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["grace*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"